autokey-gtk (0.61.2-0~karmic) karmic; urgency=low

  * Bring back cut/copy/paste item menu options
  * Add 'engine' class to scripting framework to enable access to 
    AutoKey internals
  * Add a configurable user module folder for import into scripts

 -- Chris Dekter <cdekter@gmail.com>  Fri, 1 Jan 2010 10:38:05 +1000

autokey-gtk (0.61.1-0~karmic) karmic; urgency=low

  * Fix bug in dialog.list_menu_multi()
  * Add calendar() to Dialog class (courtesy of dv8box-goo@yahoo.com)

 -- Chris Dekter <cdekter@gmail.com>  Wed, 16 Dec 2009 10:38:05 +1000

autokey-gtk (0.61.0b-1~karmic) karmic; urgency=low

  * Packaging fix - add new status icon to setup.py

 -- Chris Dekter <cdekter@gmail.com>  Sat, 12 Dec 2009 10:38:05 +1000

autokey-gtk (0.61.0b-0~karmic) karmic; urgency=low

  [ Chris Dekter ]
  * Fix bug with sending newlines from scripts
  * Fix another crash in the EvDev daemon related to button conversions
  * Change status icon to fit Karmic notification area
  
  [ Luke Faraone ]
  * Fix l10n bug in daemon.py which caused breakage on package removal
  
 -- Chris Dekter <cdekter@gmail.com>  Fri, 11 Dec 2009 10:38:05 +1000

autokey-gtk (0.61.0a-0~jaunty) jaunty; urgency=low

  * Fix/improve mouse button conversion in EvDev daemon

 -- Chris Dekter <cdekter@gmail.com>  Sun, 29 Nov 2009 10:38:05 +1000

autokey-gtk (0.61.0-0~jaunty) jaunty; urgency=low

  * Add mouse click recording and playback capabilities
  * Rework record functionality to work as a full macro facility
  * Add ability to view tracebacks from script errors in GUI
  * Change sample scripts so they work on both GTK and KDE versions
  * Handle scenario where xlib record module is not available
  * Don't undo last expansion if the mouse has been clicked
  * Improvements to AT-SPI interface - now gives the real window title

 -- Chris Dekter <cdekter@gmail.com>  Mon, 26 Oct 2009 10:38:05 +1000

autokey-gtk (0.60.7a-0~jaunty) jaunty; urgency=low

  * Fix a few issues with window scripting library
  