@@ -43,6 +43,9 @@
 		</menu>
 	</menubar>
         <toolbar name="Toolbar">
+            <toolitem action="cut-item" />
+            <toolitem action="copy-item" />
+            <toolitem action="paste-item" />
             <toolitem action="delete-item" />
             <separator />
             <toolitem action="undo" />
