@@ -4,6 +4,8 @@ autokey-gtk (0.61.2-0~karmic) karmic; urgency=low
   * Add 'engine' class to scripting framework to enable access to 
     AutoKey internals
   * Add a configurable user module folder for import into scripts
+  * Enable multiple selection mode in treeview and update all necessary
+    interactions to work correctly
 
  -- Chris Dekter <cdekter@gmail.com>  Fri, 1 Jan 2010 10:38:05 +1000
 
